--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,8 @@ coverage.xml
 # celery beat schedule file
 celerybeat-schedule
 
-# SageMath parsed files
-*.sage.py
+# json key
+movie*.json
 
 # Environments
 .env
