--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aioredis==1.3.0
+async-timeout==3.0.1
 CacheControl==0.12.5
 cachetools==3.1.1
 certifi==2019.9.11
@@ -26,7 +28,6 @@ pyasn1==0.4.7
 pyasn1-modules==0.2.7
 pytz==2019.3
 PyYAML==5.1.2
-redis==3.3.11
 requests==2.22.0
 rsa==4.0
 six==1.12.0
