--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 aioredis==1.3.1
 async-timeout==3.0.1
+attrs==18.2.0
+boto==2.48.0
 CacheControl==0.12.6
 cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+cssselect==1.1.0
+diskcache==2.9.0
 firebase-admin==3.2.1
 google-api-core==1.15.0
 google-api-python-client==1.7.11
@@ -18,20 +22,31 @@ googleapis-common-protos==1.6.0
 grpcio==1.26.0
 gunicorn==20.0.4
 h11==0.9.0
+h2==3.1.1
 hiredis==1.0.1
+hpack==3.0.0
+hstspreload==2019.12.19
 httplib2==0.15.0
 httptools==0.0.13
+httpx==0.9.5
+hyperframe==5.2.0
 idna==2.8
+imdbpie==5.6.4
+lxml==4.4.2
 msgpack==0.6.2
 protobuf==3.11.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
+python-dateutil==2.8.1
 pytz==2019.3
 PyYAML==5.2
 requests==2.22.0
+rfc3986==1.3.2
 rsa==4.0
 six==1.13.0
+sniffio==1.1.0
 starlette==0.13.0
+trans==2.1.0
 ujson==1.35
 uritemplate==3.0.1
 urllib3==1.25.7
