--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ boto==2.49.0
 CacheControl==0.12.6
 cachetools==4.1.1
 certifi==2020.11.8
+cffi==1.14.4
 chardet==3.0.4
-Click==7.1.2
+click==7.1.2
+cssselect==1.1.0
 diskcache==5.1.0
 firebase-admin==4.4.0
 google-api-core==1.23.0
@@ -16,6 +18,7 @@ google-auth-httplib2==0.0.4
 google-cloud-core==1.4.3
 google-cloud-firestore==2.0.1
 google-cloud-storage==1.33.0
+google-crc32c==1.0.0
 google-resumable-media==1.1.0
 googleapis-common-protos==1.52.0
 grpcio==1.33.2
@@ -25,6 +28,7 @@ h2==4.0.0
 hiredis==1.1.0
 hpack==4.0.0
 hstspreload==2020.11.21
+httpcore==0.12.2
 httplib2==0.18.1
 httptools==0.1.1
 httpx==0.16.1
@@ -33,9 +37,11 @@ idna==2.10
 imdbpie==5.6.4
 lxml==4.6.2
 msgpack==1.0.0
+proto-plus==1.11.0
 protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.20
 python-dateutil==2.8.1
 pytz==2020.4
 requests==2.25.0
@@ -45,7 +51,6 @@ six==1.15.0
 sniffio==1.2.0
 starlette==0.14.1
 trans==2.1.0
-ujson==4.0.1
 uritemplate==3.0.1
 urllib3==1.26.2
 uvicorn==0.12.3
