--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,6 @@
-aioredis==1.3.1
-async-timeout==3.0.1
-attrs==20.3.0
-boto==2.49.0
-CacheControl==0.12.6
-cachetools==4.1.1
-certifi==2020.11.8
-cffi==1.14.4
-chardet==3.0.4
-click==7.1.2
-cssselect==1.1.0
-diskcache==5.1.0
-firebase-admin==4.4.0
-google-api-core==1.23.0
-google-api-python-client==1.12.8
-google-auth==1.23.0
-google-auth-httplib2==0.0.4
-google-cloud-core==1.4.4
-google-cloud-firestore==2.0.1
-google-cloud-storage==1.33.0
-google-crc32c==1.0.0
-google-resumable-media==1.1.0
-googleapis-common-protos==1.52.0
-grpcio==1.34.0
-gunicorn==20.0.4
-h11==0.11.0
-h2==4.0.0
-hiredis==1.1.0
-hpack==4.0.0
-hstspreload==2020.11.21
-httpcore==0.12.2
-httplib2==0.18.1
-httptools==0.1.1
-httpx==0.16.1
-hyperframe==6.0.0
-idna==2.10
-imdbpie==5.6.4
-lxml==4.6.2
-msgpack==1.0.0
-proto-plus==1.11.0
-protobuf==3.14.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-python-dateutil==2.8.1
-pytz==2020.4
-requests==2.25.0
-rfc3986==1.4.0
-rsa==4.6
-six==1.15.0
-sniffio==1.2.0
-starlette==0.14.1
-trans==2.1.0
-uritemplate==3.0.1
-urllib3==1.26.2
-uvicorn==0.12.3
-uvloop==0.14.0
-websockets==8.1
+starlette~=0.14.1
+httpx~=0.16.1
+aioredis~=1.3.1
+uvicorn~=0.12.3
+imdbpie~=5.6.4
+firebase-admin~=4.4.0
