--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
 click==7.1.2
+cssselect==1.1.0
 diskcache==5.1.0
 firebase-admin==4.5.0
 google-api-core==1.23.0
@@ -30,6 +31,7 @@ httptools==0.1.1
 httpx==0.16.1
 idna==2.10
 imdbpie==5.6.4
+lxml==4.6.2
 msgpack==1.0.0
 proto-plus==1.13.0
 protobuf==3.14.0
@@ -37,12 +39,15 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 python-dateutil==2.8.1
+python-http-client==3.3.1
 pytz==2020.4
 requests==2.25.0
 rfc3986==1.4.0
 rsa==4.6
+sendgrid==6.4.8
 six==1.15.0
 sniffio==1.2.0
+starkbank-ecdsa==1.1.0
 starlette==0.14.1
 trans==2.1.0
 uritemplate==3.0.1
