--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,50 @@
 aioredis==2.0.0
+anyio==3.3.1
 async-timeout==3.0.1
-attrs==21.2.0
-boto==2.49.0
+attrs==18.2.0
+boto==2.48.0
 CacheControl==0.12.6
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
-chardet==4.0.0
-click==8.0.1
-cssselect==1.1.0
-diskcache==5.2.1
+charset-normalizer==2.0.6
+diskcache==2.9.0
 firebase-admin==5.0.2
-google-api-core==2.0.1
+google-api-core==1.31.2
 google-api-python-client==2.21.0
-google-auth==2.1.0
+google-auth==1.35.0
 google-auth-httplib2==0.1.0
 google-cloud-core==2.0.0
 google-cloud-firestore==2.3.2
 google-cloud-storage==1.42.2
-google-crc32c==1.1.5
+google-crc32c==1.1.2
 google-resumable-media==2.0.2
 googleapis-common-protos==1.53.0
 grpcio==1.40.0
 gunicorn==20.1.0
 h11==0.12.0
-hiredis==2.0.0
 httpcore==0.13.7
 httplib2==0.19.1
-httptools==0.3.0
 httpx==0.19.0
 idna==3.2
 imdbpie==5.6.4
-lxml==4.6.3
 msgpack==1.0.2
+packaging==21.0
 proto-plus==1.19.0
 protobuf==3.18.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+pyparsing==2.4.7
 python-dateutil==2.8.2
-python-http-client==3.3.2
 pytz==2021.1
 requests==2.26.0
 rfc3986==1.5.0
 rsa==4.7.2
-sendgrid==6.8.1
 six==1.16.0
 sniffio==1.2.0
-starkbank-ecdsa==1.1.1
 starlette==0.16.0
 trans==2.1.0
+typing-extensions==3.10.0.2
 uritemplate==3.0.1
 urllib3==1.26.6
-uvicorn==0.15.0
-uvloop==0.16.0
