--- a/.gitignore
+++ b/.gitignore
@@ -35,18 +35,6 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
 # Translations
 *.mo
 *.pot
@@ -72,5 +60,6 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-# idea
+# ide config
 .idea/
+.vscode/
