--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aioredis==2.0.0
 anyio==3.3.1
+asgiref==3.4.1
 async-timeout==3.0.1
 attrs==18.2.0
 boto==2.48.0
@@ -8,6 +9,7 @@ cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.6
+click==8.0.1
 diskcache==2.9.0
 firebase-admin==5.0.2
 google-api-core==1.31.2
@@ -48,3 +50,4 @@ trans==2.1.0
 typing-extensions==3.10.0.2
 uritemplate==3.0.1
 urllib3==1.26.6
+uvicorn==0.15.0
